TutumHelloWorldApp/DefaultHelloWorldDefination.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tutum-namespace
---
apiVersion: v1
kind: Pod
metadata:
  name: tutum-hello-world-pod
  namespace: tutum-namespace
  labels: 
    app: tutum-hello-world-app
spec:
  containers:
    - name: tutum-hello-world-container
      image: tutum/hello-world
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tutum-hello-world-service
  namespace: tutum-namespace
spec:
  type: NodePort
  selector:
    app: tutum-hello-world-app
  ports:
    - targetPort: 80
      port: 80
