TutumHelloWorldApp/Tutum-Hello-World-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: tutum-hello-world-service
spec:
  type: NodePort
  selector:
    app: tutum-hello-world-app
  ports:
    - targetPort: 80
      port: 80
