TutumHelloWorldApp/IngressRules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
  namespace: tutum-namespace
spec:
  backend:
    serviceName: tutum-hello-world-service
    servicePort: 80
